# web_hw_7

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seed.py
conf/: db.py
migration/versions/: c35bcd04f60a_init.py  ec0c2d76a535_init.py
